# eke

./: .gitignore  CMakeLists.txt  INSTALL  Makefile  ProjectHome.md  README.md  Sconstruct  build.py  coord.cpp  coord.hpp  default.run  eke.cpp  eke.hpp  eke.kdevelop  eke.kdevelop.filelist  eke.kdevelop.pcs  eke.kdevses  eke_python.cpp  field.hpp  geometry.hpp  grid.cpp  grid.hpp  input.cpp  input.hpp  io.cpp  io.hpp  license_header.txt  maggs.cpp  maggs.hpp  na.cpp  na.hpp  p_spherical_capacitor.cfg  pb_colloid.cfg  pb_colloid.cpp  pb_double_plane.cfg  pb_double_plane.cpp  types.hpp
CMakeModules/: FindBlitz.cmake  FindCat.cmake
src/: CMakeLists.txt  geometry.hpp  grid.hpp  io.cpp  io.hpp  maggs.cpp  maggs.hpp  p_plane_capacitor.cpp  p_spherical_capacitor.cpp  pb_colloid.cpp  pb_double_plane.cpp  random.hpp  types.hpp
test/: p_spherical_capacitor.cfg  pb_colloid.cfg  pb_double_plane.cfg
testing/: README  p_plane_capacitor.cfg  pb_colloid.cfg  pb_double_plane.cfg
trunk/: Makefile  Sconstruct  default.run  eke.cpp  eke.hpp  eke.kdevelop  eke.kdevelop.filelist  eke.kdevelop.pcs  eke.kdevses  eke_ccube.cpp  field.hpp  geometry.hpp  grid.cpp  grid.hpp  io.cpp  io.hpp  license_interactive.txt  maggs.cpp  maggs.hpp  p_spherical_capacitor.cfg  p_spherical_capacitor.cpp  pb_colloid.cfg  pb_double_plane.cfg  pb_double_plane.cpp  pb_double_plane_field.cfg
trunk/doc/: eke_manual.lyx
trunk/src/: grid.hpp  io.cpp  maggs.cpp  maggs.hpp  p_plane_capacitor.cpp  p_spherical_capacitor.cpp  pb_colloid.cpp  pb_double_plane.cpp
trunk/testing/: p_plane_capacitor.cfg
wiki/: News.wiki
